// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array Array keyword form 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.ArrayType(MantaStyle.StringKeyword);
    return type;
}, []);
"
`;

exports[`Array Array keyword form 2`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.ArrayType(MantaStyle.ParenthesizedType(MantaStyle.UnionType([MantaStyle.NumberKeyword, MantaStyle.StringKeyword])));
    return type;
}, []);
"
`;

exports[`Array Array keyword form 3`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const T = typeFactory.TypeParameter(\\"T\\");
    const type = MantaStyle.ArrayType(T);
    return type;
}, []);
"
`;

exports[`Array Bracket form 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.ArrayType(MantaStyle.StringKeyword);
    return type;
}, []);
"
`;

exports[`Array Bracket form 2`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.ArrayType(MantaStyle.ParenthesizedType(MantaStyle.UnionType([MantaStyle.NumberKeyword, MantaStyle.StringKeyword])));
    return type;
}, []);
"
`;
